# abxr-fpt

./: .gitignore  .gitlab-ci.yml  README.md  build_binary.sh  build_update_package.sh  device_start.sh  multi_provision.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-binaries.yml  python-publish.yml
abxr/: apk.py  device.py  device_commands.py  display.py  provision.py  tools.py  version.py
docs/hw/: links.md
scripts/: download_platform_tools.py
