[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abxrfieldprovisioningtools"
version = "0.3.0"
description = "ArborXR Field Provisioning Tools"
readme = "README.md"
authors = [{ name = "Peter Peterson", email = "peter@arborxr.com" }]

dependencies = [
    "androguard"
]

[project.scripts]
abxr-provision = "abxr.provision:main"
abxr-display-setup-mode = "abxr.setup_mode:main"

